Test: Fix deprecation